--- a/Frontend/views/dashboard.html
+++ b/Frontend/views/dashboard.html
@@ -585,6 +585,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <script src="/js/pageAccess.js"></script>
     <script src="/js/sidebar.js"></script>
+    <script src="/js/connection-monitor.js"></script>
     <script src="/js/dashboard.js"></script>
 </body>
 
