--- a/Frontend/views/profile.html
+++ b/Frontend/views/profile.html
@@ -796,6 +796,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <script src="/js/pageAccess.js"></script>
     <script src="/js/sidebar.js"></script>
+    <script src="/js/connection-monitor.js"></script>
     <script>
         // Built-in Avatar SVGs
         const AVATARS = [
